--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,14 @@
 {
   "name": "althome/exe",
+  "authors": [
+    {
+      "Name": "Sebastião Medeiros",
+      "email": "sebastian.tecinfig@gmail.com",
+      "homepage": "https://althome.site",
+      "role": "Developer"
+    }
+  ],
+  "license": "proprietary",
   "autoload": {
     "psr-4": {
       "App\\": "app/"
