--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "althome/exe",
-  "authors": [
+  "author": [
     {
       "Name": "Sebastião Medeiros",
       "email": "sebastian.tecinfig@gmail.com",
