--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }
   ],
   "license": "proprietary",
-  "minimum-stability": "stable",
+  "minimum-stability": "alpha",
   "autoload": {
     "psr-4": {
       "App\\": "app/"
